# receipt_generator_ai_agent

./: README.md  agent.py  app.py  main.py  pdf_generator.py  pyproject.toml  requirements.txt
src/: agent.py  main.py  pdf_generator.py
